fixed spacing again

--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -10,10 +10,10 @@
 
 .page-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh
+    min-height: 75vh
 }
 
 .page-container span {
